[metadata]
name = py2static
description = Create static binaries from Python scripts
author = João Pinto
author_email = lamego.pinto@gmail.com
url = https://github.com/joaompinto/py2static
license = MIT
license_file = LICENSE

[options]
include_package_data = True
packages = find_namespace:
setup_requires =
    setuptools_scm
    wheel

[options.entry_points]
console_scripts =
    py2static = py2static.__main__:app
